Source/Falcon/gen/lang/FalconParser.py
# Generated from /media/aaron/Shared2/School/BGSU-thesis/Source/lang/Falcon.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class FalconParser ( Parser ):

    grammarFileName = "Falcon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'Domain'", "'['", "']'", "'Test'", 
                     "'Assert'", "<INVALID>", "'Satisfy'", "'('", "')'", 
                     "'{'", "'}'", "','", "<INVALID>", "'|'", "'|>'", "':'", 
                     "<INVALID>", "<INVALID>", "'\u22BC'", "<INVALID>", 
                     "'\u22BB'", "<INVALID>", "'#'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "TEST", "ASSERT", "WINNOW", "SATISFY", 
                      "LPAREN", "RPAREN", "LBRAC", "RBRAC", "COMMA", "ASSIGN", 
                      "BAR", "ABAR", "COLON", "OP_LOGICAL", "OP_AND", "OP_NAND", 
                      "OP_OR", "OP_XOR", "OP_NOT", "OP_CARDINALITY", "DIRECTIVE", 
                      "FNARG", "ID", "OPERATORS", "OP_EQ", "ARROW", "LABEL", 
                      "NUMBER", "STRING", "CODESMNT", "UMATH", "COMMENT", 
                      "MCOMMENT", "WS", "NL" ]

    RULE_program = 0
    RULE_block = 1
    RULE_namespace = 2
    RULE_stmt = 3
    RULE_assertion = 4
    RULE_test = 5
    RULE_domain_names = 6
    RULE_test_stub = 7
    RULE_test_logical = 8
    RULE_winnow_test = 9
    RULE_satisfy_test = 10
    RULE_bin_stub = 11
    RULE_domain = 12
    RULE_compiler = 13
    RULE_fn_arg = 14
    RULE_code = 15
    RULE_assign = 16
    RULE_arg_list = 17
    RULE_value_list = 18
    RULE_name = 19
    RULE_predicate = 20
    RULE_expression = 21
    RULE_value = 22
    RULE_named_value = 23
    RULE_dictate = 24

    ruleNames =  [ "program", "block", "namespace", "stmt", "assertion", 
                   "test", "domain_names", "test_stub", "test_logical", 
                   "winnow_test", "satisfy_test", "bin_stub", "domain", 
                   "compiler", "fn_arg", "code", "assign", "arg_list", "value_list", 
                   "name", "predicate", "expression", "value", "named_value", 
                   "dictate" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    TEST=5
    ASSERT=6
    WINNOW=7
    SATISFY=8
    LPAREN=9
    RPAREN=10
    LBRAC=11
    RBRAC=12
    COMMA=13
    ASSIGN=14
    BAR=15
    ABAR=16
    COLON=17
    OP_LOGICAL=18
    OP_AND=19
    OP_NAND=20
    OP_OR=21
    OP_XOR=22
    OP_NOT=23
    OP_CARDINALITY=24
    DIRECTIVE=25
    FNARG=26
    ID=27
    OPERATORS=28
    OP_EQ=29
    ARROW=30
    LABEL=31
    NUMBER=32
    STRING=33
    CODESMNT=34
    UMATH=35
    COMMENT=36
    MCOMMENT=37
    WS=38
    NL=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.BlockContext)
            else:
                return self.getTypedRuleContext(FalconParser.BlockContext,i)


        def EOF(self):
            return self.getToken(FalconParser.EOF, 0)

        def getRuleIndex(self):
            return FalconParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = FalconParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.state = 56
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FalconParser.T__1, FalconParser.TEST, FalconParser.ASSERT, FalconParser.WINNOW, FalconParser.SATISFY, FalconParser.DIRECTIVE, FalconParser.ID, FalconParser.LABEL, FalconParser.CODESMNT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 50
                    self.block()
                    self.state = 53 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FalconParser.T__1) | (1 << FalconParser.TEST) | (1 << FalconParser.ASSERT) | (1 << FalconParser.WINNOW) | (1 << FalconParser.SATISFY) | (1 << FalconParser.DIRECTIVE) | (1 << FalconParser.ID) | (1 << FalconParser.LABEL) | (1 << FalconParser.CODESMNT))) != 0)):
                        break

                pass
            elif token in [FalconParser.EOF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(FalconParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namespace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.NamespaceContext)
            else:
                return self.getTypedRuleContext(FalconParser.NamespaceContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.StmtContext)
            else:
                return self.getTypedRuleContext(FalconParser.StmtContext,i)


        def getRuleIndex(self):
            return FalconParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = FalconParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 59 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 58
                        self.namespace()

                    else:
                        raise NoViableAltException(self)
                    self.state = 61 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 63
                        self.stmt()

                    else:
                        raise NoViableAltException(self)
                    self.state = 66 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FalconParser.RULE_namespace

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NsContext(NamespaceContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.NamespaceContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def name(self):
            return self.getTypedRuleContext(FalconParser.NameContext,0)

        def LBRAC(self):
            return self.getToken(FalconParser.LBRAC, 0)
        def RBRAC(self):
            return self.getToken(FalconParser.RBRAC, 0)
        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.StmtContext)
            else:
                return self.getTypedRuleContext(FalconParser.StmtContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNs" ):
                listener.enterNs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNs" ):
                listener.exitNs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNs" ):
                return visitor.visitNs(self)
            else:
                return visitor.visitChildren(self)



    def namespace(self):

        localctx = FalconParser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_namespace)
        self._la = 0 # Token type
        try:
            localctx = FalconParser.NsContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.name()
            self.state = 71
            self.match(FalconParser.LBRAC)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FalconParser.T__1) | (1 << FalconParser.TEST) | (1 << FalconParser.ASSERT) | (1 << FalconParser.WINNOW) | (1 << FalconParser.SATISFY) | (1 << FalconParser.DIRECTIVE) | (1 << FalconParser.ID) | (1 << FalconParser.LABEL) | (1 << FalconParser.CODESMNT))) != 0):
                self.state = 72
                self.stmt()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(FalconParser.RBRAC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def test(self):
            return self.getTypedRuleContext(FalconParser.TestContext,0)


        def assertion(self):
            return self.getTypedRuleContext(FalconParser.AssertionContext,0)


        def winnow_test(self):
            return self.getTypedRuleContext(FalconParser.Winnow_testContext,0)


        def satisfy_test(self):
            return self.getTypedRuleContext(FalconParser.Satisfy_testContext,0)


        def domain(self):
            return self.getTypedRuleContext(FalconParser.DomainContext,0)


        def compiler(self):
            return self.getTypedRuleContext(FalconParser.CompilerContext,0)


        def code(self):
            return self.getTypedRuleContext(FalconParser.CodeContext,0)


        def assign(self):
            return self.getTypedRuleContext(FalconParser.AssignContext,0)


        def getRuleIndex(self):
            return FalconParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = FalconParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [FalconParser.TEST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.test()
                pass
            elif token in [FalconParser.ASSERT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.assertion()
                pass
            elif token in [FalconParser.WINNOW]:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.winnow_test()
                pass
            elif token in [FalconParser.SATISFY]:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.satisfy_test()
                pass
            elif token in [FalconParser.T__1]:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.domain()
                pass
            elif token in [FalconParser.DIRECTIVE]:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.compiler()
                pass
            elif token in [FalconParser.CODESMNT]:
                self.enterOuterAlt(localctx, 7)
                self.state = 86
                self.code()
                pass
            elif token in [FalconParser.ID, FalconParser.LABEL]:
                self.enterOuterAlt(localctx, 8)
                self.state = 87
                self.assign()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssertionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FalconParser.RULE_assertion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Assert_testContext(AssertionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.AssertionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ASSERT(self):
            return self.getToken(FalconParser.ASSERT, 0)
        def name(self):
            return self.getTypedRuleContext(FalconParser.NameContext,0)

        def COLON(self):
            return self.getToken(FalconParser.COLON, 0)
        def test_stub(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.Test_stubContext)
            else:
                return self.getTypedRuleContext(FalconParser.Test_stubContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssert_test" ):
                listener.enterAssert_test(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssert_test" ):
                listener.exitAssert_test(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssert_test" ):
                return visitor.visitAssert_test(self)
            else:
                return visitor.visitChildren(self)



    def assertion(self):

        localctx = FalconParser.AssertionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assertion)
        self._la = 0 # Token type
        try:
            localctx = FalconParser.Assert_testContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(FalconParser.ASSERT)
            self.state = 91
            self.name()
            self.state = 92
            self.match(FalconParser.COLON)
            self.state = 94 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 93
                self.test_stub()
                self.state = 96 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==FalconParser.BAR or _la==FalconParser.ABAR):
                    break

            self.state = 98
            self.match(FalconParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FalconParser.RULE_test

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Test_basicContext(TestContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.TestContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TEST(self):
            return self.getToken(FalconParser.TEST, 0)
        def name(self):
            return self.getTypedRuleContext(FalconParser.NameContext,0)

        def domain_names(self):
            return self.getTypedRuleContext(FalconParser.Domain_namesContext,0)

        def COLON(self):
            return self.getToken(FalconParser.COLON, 0)
        def test_stub(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.Test_stubContext)
            else:
                return self.getTypedRuleContext(FalconParser.Test_stubContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTest_basic" ):
                listener.enterTest_basic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTest_basic" ):
                listener.exitTest_basic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTest_basic" ):
                return visitor.visitTest_basic(self)
            else:
                return visitor.visitChildren(self)



    def test(self):

        localctx = FalconParser.TestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_test)
        self._la = 0 # Token type
        try:
            localctx = FalconParser.Test_basicContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(FalconParser.TEST)
            self.state = 101
            self.name()
            self.state = 102
            self.domain_names()
            self.state = 103
            self.match(FalconParser.COLON)
            self.state = 105 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 104
                self.test_stub()
                self.state = 107 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==FalconParser.BAR or _la==FalconParser.ABAR):
                    break

            self.state = 109
            self.match(FalconParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Domain_namesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FalconParser.RULE_domain_names

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Get_domain_namesContext(Domain_namesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.Domain_namesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.NameContext)
            else:
                return self.getTypedRuleContext(FalconParser.NameContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FalconParser.COMMA)
            else:
                return self.getToken(FalconParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGet_domain_names" ):
                listener.enterGet_domain_names(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGet_domain_names" ):
                listener.exitGet_domain_names(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGet_domain_names" ):
                return visitor.visitGet_domain_names(self)
            else:
                return visitor.visitChildren(self)


    class Get_domain_nameContext(Domain_namesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.Domain_namesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def name(self):
            return self.getTypedRuleContext(FalconParser.NameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGet_domain_name" ):
                listener.enterGet_domain_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGet_domain_name" ):
                listener.exitGet_domain_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGet_domain_name" ):
                return visitor.visitGet_domain_name(self)
            else:
                return visitor.visitChildren(self)



    def domain_names(self):

        localctx = FalconParser.Domain_namesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_domain_names)
        self._la = 0 # Token type
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = FalconParser.Get_domain_nameContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.name()
                pass

            elif la_ == 2:
                localctx = FalconParser.Get_domain_namesContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.name()
                self.state = 117 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 114
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==FalconParser.COMMA:
                        self.state = 113
                        self.match(FalconParser.COMMA)


                    self.state = 116
                    self.name()
                    self.state = 119 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << FalconParser.COMMA) | (1 << FalconParser.ID) | (1 << FalconParser.LABEL))) != 0)):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Test_stubContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FalconParser.RULE_test_stub

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Stub_logicalContext(Test_stubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.Test_stubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BAR(self):
            return self.getToken(FalconParser.BAR, 0)
        def test_logical(self):
            return self.getTypedRuleContext(FalconParser.Test_logicalContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStub_logical" ):
                listener.enterStub_logical(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStub_logical" ):
                listener.exitStub_logical(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStub_logical" ):
                return visitor.visitStub_logical(self)
            else:
                return visitor.visitChildren(self)


    class Stub_many_pvContext(Test_stubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.Test_stubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BAR(self):
            return self.getToken(FalconParser.BAR, 0)
        def predicate(self):
            return self.getTypedRuleContext(FalconParser.PredicateContext,0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.ValueContext)
            else:
                return self.getTypedRuleContext(FalconParser.ValueContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStub_many_pv" ):
                listener.enterStub_many_pv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStub_many_pv" ):
                listener.exitStub_many_pv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStub_many_pv" ):
                return visitor.visitStub_many_pv(self)
            else:
                return visitor.visitChildren(self)


    class Stub_side_effectContext(Test_stubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.Test_stubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ABAR(self):
            return self.getToken(FalconParser.ABAR, 0)
        def value(self):
            return self.getTypedRuleContext(FalconParser.ValueContext,0)

        def predicate(self):
            return self.getTypedRuleContext(FalconParser.PredicateContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStub_side_effect" ):
                listener.enterStub_side_effect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStub_side_effect" ):
                listener.exitStub_side_effect(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStub_side_effect" ):
                return visitor.visitStub_side_effect(self)
            else:
                return visitor.visitChildren(self)


    class Stub_side_effect_manyContext(Test_stubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.Test_stubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ABAR(self):
            return self.getToken(FalconParser.ABAR, 0)
        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.ValueContext)
            else:
                return self.getTypedRuleContext(FalconParser.ValueContext,i)

        def predicate(self):
            return self.getTypedRuleContext(FalconParser.PredicateContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStub_side_effect_many" ):
                listener.enterStub_side_effect_many(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStub_side_effect_many" ):
                listener.exitStub_side_effect_many(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStub_side_effect_many" ):
                return visitor.visitStub_side_effect_many(self)
            else:
                return visitor.visitChildren(self)


    class Stub_directivesContext(Test_stubContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FalconParser.Test_stubContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BAR(self):
            return self.getToken(FalconParser.BAR, 0)
        def compiler(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FalconParser.CompilerContext)
            else:
                return self.getTypedRuleContext(FalconParser.CompilerContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStub_directives" ):
                listener.enterStub_directives(self)
